Fix row gap in section

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -11,6 +11,8 @@
 }
 
 .footer__container {
+  --row-gap: 24px;
+
   @extend %container;
 
   grid-template-areas:
